--- a/MenaraProject/src/main/resources/application.properties
+++ b/MenaraProject/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:4306/menarap
+spring.datasource.url=jdbc:mysql://localhost:3306/menarap
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
